# ircord-server

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  vcpkg.json
cmake/: functions.cmake
config/: server.toml.example
docs/: client-architecture.md  cloudflare-tunnel-setup.md  ircord-design.md  ircord-tech-tradeoffs.md  letsencrypt-setup.md  server-architecture.md
docs/android/: architecture.md  design-tokens.md  wireframes.md
docs/plans/: ADMIN_RESERVED_PLAN.md
scripts/: README.md  install-legacy-build.sh  install.sh  ircord-generate-file-encryption-key
src/: config.cpp  config.hpp  main.cpp  server.cpp  server.hpp  server_config.hpp
src/admin/: reserved_identity.cpp  reserved_identity.hpp  server_owner.cpp  server_owner.hpp
src/channel/: channel_manager.cpp  channel_manager.hpp
src/commands/: command_handler.cpp  command_handler.hpp
src/crypto/: file_encryptor.cpp  file_encryptor.hpp
src/db/: database.cpp  database.hpp  file_store.cpp  file_store.hpp  offline_store.cpp  offline_store.hpp  user_store.cpp  user_store.hpp
src/net/: directory_client.cpp  directory_client.hpp  listener.cpp  listener.hpp  rate_limiter.hpp  session.cpp  session.hpp  tls_context.cpp  tls_context.hpp
src/proto/: ircord.proto
src/security/: virus_scanner.cpp  virus_scanner.hpp
src/utils/: channel_utils.hpp  nickname_utils.hpp  string_utils.hpp
src/voice/: voice_room_manager.cpp  voice_room_manager.hpp
